<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Note</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text1">文字</string>
    <string name="text2">图片</string>
    <string name="text3">视频</string>
    <string name="title_activity_add_content">AddContent</string>
    <string name="def">有了记事本，我再也不会忘记事情了</string>
    <string name="save">保存</string>
    <string name="del">取消</string>
    <string name="title_activity_my_adpter">MyAdpter</string>
    <string name="title_activity_select">SelectAct</string>
    <string name="S_butt1">删除</string>
    <string name="S_butt2">返回</string>

</resources>
