<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   	android:orientation="vertical"
    tools:context="com.lijun.note.AddContent" >

    <ImageView 
        android:layout_width="300dp"
        android:layout_height="500dp"
        android:id="@+id/c_img"
        android:visibility="gone"/>
    
    <VideoView 
        android:id="@+id/c_video"
        android:layout_width="300dp"
        android:layout_height="500dp"
         android:visibility="gone"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@null"
        android:gravity="top"
        android:id="@+id/ettext"
        android:hint="@string/def"/>
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button 
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            style="?android:attr/borderlessButtonStyle"/>
          <Button 
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/del"
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>

</LinearLayout>
